style: Fix sidebar spacing

--- a/TvDbApp/src/app/tv-details/tv-details.component.css
+++ b/TvDbApp/src/app/tv-details/tv-details.component.css
@@ -8,6 +8,9 @@
 }
 
 .formAndSearchBtnContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin-left: 2rem;
 }
 
